# Compass

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  BLOCKERS_AND_PLAN_2026-04-18.md  CLAUDE.md  COMPASS.docx  COMPASS.md  COMPASS_AUDIT_REPORT_2026-04-09.md  COMPASS_AUDIT_REPORT_2026-04-18.md  CompassCHW_AWS_Cost_Breakdown.xlsx  CompassCHW_Gantt_Chart.xlsx  DEPLOY.md  PEARSUITE_MEETING_PREP.md  PRE_SESSION_BRIEF.md  PROJECT_CONTEXT.md  README.md  RUNBOOK_PEARSUITE_DEMO.md  SESSION_SUMMARY_2026-04-09-10.md  SESSION_SUMMARY_2026-04-18.md  SESSION_SUMMARY_2026-04-18_part2.md  SESSION_SUMMARY_2026-04-19.md
backend/: .dockerignore  .env.example  Dockerfile  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  limiter.py  main.py
backend/docs/: S3_CORS_CREDENTIAL_UPLOADS.md  SES_GO_LIVE.md
backend/infra/: README-s3-cors.md  s3-cors.json
backend/scripts/: __init__.py  audit_member_names.py  audit_session_per_call_readiness.py  backfill_member_csv.py  backfill_recent_recordings.py  cleanup_seed_data.py  cleanup_stuck_in_progress.py  dry_run_journey_remap.py  merge_duplicate_conversations.py  migrate_audio_paths.py  ops.py  repair_orphaned_audio_paths.py  reset_stripe_accounts.py  seed_founders.py  seed_resources.py  smoke_test_prod.py  test_assemblyai.py  test_pear_activity_no_billing.py  test_pear_create_jemal.py  test_pear_full_claim_chain.py  test_pear_generate_claim.py  test_pear_schedule_billing_activity.py  test_pear_set_insurance.py  test_pear_suite.py  test_vonage.py  wipe_to_clean_slate.py
backend/tests/: conftest.py  test_account_deactivation.py  test_account_deletion.py  test_account_deletion_fk_graph.py  test_admin_2fa.py  test_admin_and_waitlist.py  test_admin_background_check.py  test_admin_billing_export.py  test_admin_json_api.py  test_ai_summary.py  test_assemblyai_streaming_session.py  test_assessments.py  test_auth.py  test_available_slots.py  test_avatar_urls.py  test_bidirectional_comms.py  test_billable_units.py  (+107 more)
native/: App.tsx  (+12 more)
(+664 files in other folders)
